# mulatu

./: README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
mulatu/: __init__.py  tree.py
mulatu/templates/: _resources.py.mako
tests/: conftest.py  petstore.yaml  test_arg_parser.py  test_mulatu.py  test_parse_openapi_spec.py  test_resource.py  test_run.py
