[tool.poetry]
name = "mulatu"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Hadrien David <hadrien@ectobal.com>"]
readme = "README.md"
repository = "https://github.com/hadrien/mulatu"

[tool.poetry.dependencies]
python = "^3.7"
structlog = "^20.1.0"
fastapi = "^0.47.1"
prance = "^0.18.1"
openapi-spec-validator = "^0.2.8"
mako = "^1.1.1"
black = "^19.10b0"
awesome-slugify = "^1.6.5"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"
pdbpp = "^0.10.0"
pylama = "^7.7.1"
mypy = "^0.720"
black = "^19.3b0"
python-semantic-release = "^4.4.0"
isort = "^4.3.21"
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
mulatu = "mulatu:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

